# Prosody_Project

./: .gitignore  Plan.md  README.md  pyproject.toml  review_model.ipynb  structure.txt
notebooks/: Directory_length.ipynb  Language_Detection.ipynb  Language_size.ipynb  make_spect.py  make_spect_gpu.ipynb  view_spect.ipynb
notebooks/logs/: lang_detect_41837619.err  lang_detect_41837619.out
old_files/notebooks/: Multi_Language_Detection.ipynb  Multi_Language_Detection.py  Multi_Language_GPU_Detection.ipynb  Review.ipynb  run_lang_detect.sh  setup.py  spectrogram.pt
old_files/old_robust/: make_spect.py  spectrogram.py
old_files/robust_files/: low_pass_spect.py  make_spect.py  path.py  prosody_nn.py
review/: .csv  .txt
robust_files/: Multi_Lang_GPU.py  label_encoder.pkl  language_lengths.py  low_pass_spect.py  make_spect.py  prosody_nn.py  review_model.ipynb  review_models.py  testing_fourier_transform.py  train_gpu.py
robust_files/review/: initial_model  initial_model.txt  sr=16000n_fft=2048hop_length=256.csv  sr=16000n_fft=2048hop_length=256.txt  sr=16000n_fft=256hop_length=512.csv  sr=16000n_fft=256hop_length=512.txt  sr=16000n_fft=512hop_length=256.csv  sr=16000n_fft=512hop_length=512.csv  sr=16000n_fft=512hop_length=512.txt
robust_files/scripts/: run_lang_leng.sh  run_make_spect.sh  run_multi_lang.sh
src/: structure.txt
src/language_detection/: config.py  lengths.py  spect.py  train.py
src/notebooks/: check.ipynb  distributions.ipynb  historgrams.ipynb  review_model.ipynb  rnn.md  shape.py  testing.ipynb  unique_speakers.ipynb
(+84 files in other folders)
